fix link wrapping

--- a/themes/northendlab/assets/scss/templates/_main.scss
+++ b/themes/northendlab/assets/scss/templates/_main.scss
@@ -321,6 +321,11 @@
 
 // experiences
 .experiences {
+  .break-link {
+    word-break: break-all;
+    overflow-wrap: break-word;
+    white-space: normal;
+  }
   .container {
     padding: 100px;
     padding-bottom: 50px;
